# master_root

./: .cursorignore  .editorconfig  .env.example  .fileignore  .gitignore  .mcp.recovered.json  .pre-commit-config.yaml  ACCF_PROJECT_MAP_STRUCTURE.md  AGENT_CORE_IMPLEMENTATION_PROPOSAL.md  AGENT_ONBOARDING_SDLC.md  AGENT_WORLD_TO_OPSVI_MAPPING.md  AI_CAPABILITY_IMPLEMENTATION_PLAN.md  CLAUDE-temp.md  CLAUDE.md  CLAUDE_CODE_MIGRATION_STATUS.md  CLAUDE_CONDENSED.md  CLAUDE_FINAL.md  CLAUDE_OPTIMAL.md  CLAUDE_PERSONA.md  CLAUDE_PREFLIGHT.md  CLAUDE_ULTIMATE.md  CONTEXT_STATE.md  DEVELOPER_REQUIREMENTS.md  DYNAMIC_INTELLIGENCE_STRATEGY.md  Dockerfile  FINAL_STATUS_REPORT.md  GAP_ANALYSIS.md  GEMINI_SUBSCRIPTION_CLARIFICATION.md  KNOWLEDGE_SYSTEM_ANALYSIS.md  MCP_TOKEN_FIX_SUMMARY.md  MERGE_PLAN.md  OPSVI_LIBS_GAP_ANALYSIS.md  OPTIMIZATION_PAUSE_STATUS.md  PARALLEL_SPAWNING_STRATEGY.md  PATTERN_ENGINE_EXTRACTION_SUMMARY.md  PEER_CODEBASE_ANALYSIS.md  PERPLEXITY_INTEGRATION_SUCCESS.md  PERPLEXITY_INTEGRATION_SUMMARY.md  QUICK_START.md  README.md  (+86 more)
apps/accf/: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  agent_api.py  baseline_mypy.txt  baseline_ruff.txt  baseline_security.txt  baseline_tests.txt  collaborative_workflow_implementation_guide.md  collect_project_info.py  current_requirements.txt  demo_comprehensive_research.py  demo_enhanced_research_agent.py  demo_research_agent_showcase.py  demo_simple_research.py  demo_vector_search.py  demonstration_workflow_example_20250801.md  extract_project_summary.py  k6_performance_test.js  knowledge_update_accf_omni_evo_analysis_20250115.md  knowledge_update_ai_collaboration_workflow_20250801.md  knowledge_update_github_mcp_403_error_20250802.md  knowledge_update_innovative_prompt_strategies_20250801.md  knowledge_update_neo4j_vector_rag_20250801.md  knowledge_update_project_intelligence_completion_20250715.md  knowledge_update_project_intelligence_completion_20250715.md.hash  knowledge_update_project_intelligence_next_steps_20250801.md  knowledge_update_project_intelligence_strategy_20250801.md  knowledge_update_python_modularization_20250715.md  knowledge_update_python_modularization_20250715.md.hash  knowledge_update_seai_next_steps_20250115.md  knowledge_update_strategic_planning_20250115.md  knowledge_update_workspace_bootstrap_20250115.md  mcp_agent_server.py  mkdocs.yml  model_comparison_test.py  model_responses.md  model_responses.md.hash  model_selection_config.json  (+18 more)
apps/accf/.cursor/: mcp.json  mcp.json.txt  sysmsg.txt
apps/accf/.map/: app_map.json  project_map.json
apps/accf/.specstory/: .project.json
apps/accf/accf_agents/: __init__.py
apps/accf/agent_base/: agent_base.py
apps/accf/artifacts/: compliance_violations_20250730.txt  loc_stats_20250730.txt  tree_20250730.txt
apps/accf/capabilities/: challenge_agent.py  check_me_agent.py  collaboration_agent.py  consult_agent.py  critic_agent.py  critique_agent.py  documentation_agent.py  documentation_bundle_agent.py  execution_agent.py  feedback_agent.py  knowledge_agent.py  memory_agent.py  neo4j_knowledge_graph.py  research_agent.py  security_agent.py  self_reflection_agent.py  synthesis_agent.py  testing_agent.py
apps/accf/docs/: CHANGELOG.md  CHANGELOG.md.hash  DOCUMENTATION_ORGANIZATION_REPORT.md  DOCUMENTATION_ORGANIZATION_REPORT.md.hash  README.md  README.md.hash  index.md  index.md.hash
apps/accf/orchestrator/: orchestrator.py  subscription_engine.py  task_market.py
apps/accf/registry/: registry.py
apps/accf/shared/: __init__.py
apps/accf/tests/: __init__.py  test_agent_base.py  test_agents.py  test_async_endpoints.py  test_capabilities.py  test_consult_agent_design.py  test_consult_agent_model_validation.py  test_documentation_bundle_agent.py  test_end_to_end.py  test_neo4j_knowledge_graph.py  test_new_agents.py  test_orchestrator.py  (+1 more)
apps/genfilemap/: .cursorignore  .gitignore  CLEANUP_AND_OPTIMIZATION_SUMMARY.md  COMPREHENSIVE_GENFILEMAP_ANALYSIS_PROMPT.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt  seai_validation_report.md  setup.py
apps/hello-cli/: .env.example  .gitignore  Dockerfile  pyproject.toml  setup.cfg
apps/proj-mapper/: .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  code_max_lines_refactor_and_modularize.md  debug_build_graph.py  debug_enum.py  debug_relationship.py  debug_relationship_detection.py  debug_trace.py  discovery.log.copy  example_relationships.json  fix_enums.py  graph.json  patch_enum.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  setup_paths.py  test_fix.py  test_graph.json  test_location_serialization.py  test_pydantic_location.py
apps/project-intel/: README.md  pyproject.toml
generated_app/: pyproject.toml
libs/opsvi-agents/: README.md  knowledge_update_crewai_20250805.md  pyproject.toml
libs/opsvi-core/: README.md  pyproject.toml  setup.py
libs/opsvi-data/: ENHANCEMENT_SUMMARY.md  README.md  demo_enhanced_data.py  pyproject.toml  setup.py
libs/opsvi-ecosystem/: README.md  pyproject.toml
libs/opsvi-llm/: ENHANCEMENT_SUMMARY.md  README.md  demo_enhanced_llm.py  knowledge_update_langchain_20250805.md  pyproject.toml  setup.py
libs/opsvi-memory/: pyproject.toml
libs/opsvi-rag/: ENHANCED_RAG_README.md  README.md  knowledge_update_qdrant_20250805.md  knowledge_update_sentence_transformers_20250805.md  pyproject.toml
libs/opsvi-workers/: README.md  pyproject.toml
libs_backup_20250807_112624/opsvi-foundation/: knowledge_update_opentelemetry_20250805.md  knowledge_update_structlog_20250805.md  knowledge_update_uv_20250805.md  pyproject.toml
libs_backup_20250807_112624/opsvi-fs/: README.md  pyproject.toml
libs_backup_20250807_112624/opsvi-interfaces/: README.md  pyproject.toml
libs_backup_20250807_112624/opsvi-monitoring/: README.md  pyproject.toml
libs_backup_20250807_112624/opsvi-web/: README.md  pyproject.toml
test_gpt5/: README.md  __init__.py  pyproject.toml  requirements.txt
test_gpt5/agent/: __init__.py  main.py  openai_client.py
test_gpt5/tests/: test_apply_patch_adapter.py  test_cli_scaffold.py
(+5616 files in other folders)
