[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pycalc"
version = "0.1.0"
description = "A safe, tiny calculator CLI and library."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
  { name = "PyCalc Authors" }
]
keywords = ["calculator", "math", "cli", "ast", "safe-eval"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Environment :: Console",
  "Topic :: Utilities",
  "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = []

[project.scripts]
pycalc = "pycalc.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
