[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[project]
name = "pycalc"
version = "0.1.0"
description = "A small, safe Python calculator with CLI and API."
readme = "README.md"
requires-python = ">=3.8"
authors = [
  { name = "PyCalc Authors" }
]
license = { text = "MIT" }
keywords = ["calculator", "math", "cli", "ast", "safe-eval"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Topic :: Utilities",
  "Topic :: Scientific/Engineering :: Mathematics",
]

[project.scripts]
pycalc = "pycalc.__main__:main"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
