[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "test_gpt5"
version = "0.1.0"
description = "GPT-5 coding agent using OpenAI Responses API to generate apps and apply code patches"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [ { name = "Auto Agent" } ]
dependencies = [
  "openai>=1.30.0",
  "requests>=2.31.0",
  "types-requests>=2.31.0.20240406",
  "tenacity>=8.2.3",
  "pydantic>=2.7.0",
  "beautifulsoup4>=4.12.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "pytest-cov>=4.1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["test_gpt5*"]

