[project]
name = "accf"
version = "0.1.0"
description = "ACCF - AI Collaboration and Code Framework"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "OPSVI Team", email = "team@opsvi.ai"}
]

dependencies = [
    "opsvi-core",
    "opsvi-llm",
    "opsvi-agents",
    "opsvi-rag",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["accf_agents"]