[project]
name = "genfilemap"
version = "0.1.0"
description = "GenFileMap - File mapping and analysis tool"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "OPSVI Team", email = "team@opsvi.ai"}
]

dependencies = [
    "opsvi-core",
    "opsvi-llm",
    "opsvi-agents",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/genfilemap"]