[metadata]
name = hello-cli
version = 1.0.0
author = OPSVI
author_email = admin@opsvi.com
description = A production-ready Hello World CLI application
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/opsvi/hello-cli
project_urls =
    Bug Tracker = https://github.com/opsvi/hello-cli/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    hello-cli = hello_cli.__main__:main
