[build-system]
requires = ["hatchling>=1.20"]
build-backend = "hatchling.build"

[project]
name = "opsvi-fs"
version = "0.0.1"
description = "File-system and storage management"
authors = [{ name = "OPSVI", email = "opensource@opsvi.dev" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["opsvi-foundation>=0.1.0"]

[project.urls]
Homepage = "https://github.com/opsvi/master-workspace"
Documentation = "https://github.com/opsvi/master-workspace/tree/main/libs/opsvi-fs"
Source = "https://github.com/opsvi/master-workspace"

[tool.hatch.build.targets.wheel]
packages = ["opsvi_fs"]
