[project]
name = "opsvi_web"
version = "0.0.1"
description = "TODO: describe opsvi_web"
authors = [
    { name = "OPSVI", email = "opsvi@example.com" }
]
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.black]
target-version = ["py39"]

[tool.ruff]
line-length = 88

[tool.mypy]
strict = true
